--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Find Bascket Elements</title>
-</head>
-<body>
+
     
-</body>
+    <link rel="stylesheet" href="./style.css" async />
+  </head>
+  <body class="container py-1">
+    <div class="preloader__container">
+      <img id="preloader__img" src="./assets/images/Preloader_2.gif" />
+    </div>
+  
+    <script src="./scripts/jquery-3.6.0.min.js" ></script>
+    <script src="./script.js" type="text/javascript" ></script>
+  </body>
 </html>
