--- a/index.html
+++ b/index.html
@@ -100,9 +100,13 @@
         /></a>
         <div class="footer-background"></div>
       </footer>
-      <script src="./scripts/jquery-3.6.0.min.js"></script>
-      <script src="./buttons.js"></script>
-      <script src="./script.js"></script>
     </div>
+    <div id="github">
+      <!-- <img src="./assets/images/GitHub_logo.png" alt="github logo" style="width: 70px;height: auto;"/> -->
+    </div>
+    <script src="./scripts/jquery-3.6.0.min.js"></script>
+    <script src="./scripts/buttons.js"></script>
+    <script src="./scripts/winScale.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
